[package]
name = "nessa-cpu"
description = "a simple & accurate 6502 emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/backwardspy/nessa"
readme = "README.md"
keywords = ["nes", "6502", "emulator"]
categories = ["emulation"]

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.38"
tracing = "0.1.37"
nessa-rom = { path = "../nessa-rom" }
