[package]
name = "nessa-ppu"
description = "a simple & accurate NES PPU emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/backwardspy/nessa"
readme = "README.md"
keywords = ["nes", "ppu", "emulator"]
categories = ["emulation"]


[dependencies]
bitflags = "1.3.2"
nessa-rom = { path = "../nessa-rom" }
tracing = "0.1.37"
