[package]
name = "nessa"
description = "a simple & accurate NES emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/backwardspy/nessa"
readme = "README.md"
keywords = ["nes", "emulator", "6502"]
categories = ["emulation"]

[dependencies]
nessa-cpu = { path = "../nessa-cpu" }
nessa-ppu = { path = "../nessa-ppu" }
nessa-mem = { path = "../nessa-mem" }
nessa-disasm = { path = "../nessa-disasm" }
nessa-rom = { path = "../nessa-rom" }
color-eyre = "0.6.2"
clap = { version = "4.1.4", features = ["derive"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
speedy2d = "1.10.0"
rand = "0.8.5"
