[package]
name = "nessa6502-disasm"
description = "a simple 6502 disassembler"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/backwardspy/nessa"
readme = "README.md"
keywords = ["nes", "6502", "disassembler"]
categories = ["disassembler"]

[dependencies]
thiserror = "1.0.38"
nessa6502 = { path = "../nessa6502" }
