[package]
name = "nessa6502"
description = "a simple & accurate 6502 emulator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/backwardspy/nessa"
readme = "README.md"
keywords = ["nes", "6502", "emulator"]
categories = ["emulators"]

[dependencies]
bitflags = "1.3.2"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.38"
tracing = "0.1.37"
